--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   }
 }
